2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* .gitignore: added new files to ignore
	* cairomm/fontface.cc:
	* cairomm/fontface.h: implement the ToyFontFace class
	* configure.in:
	* examples/Makefile.am:
	* examples/text/Makefile.am: Renamed from examples/text-rotate/Makefile.am.
	* examples/text/text-rotate.cc: Renamed from examples/text-rotate/text-rotate.cc.
	* examples/text/toy-text.cc: Added.
	* tests/Makefile.am:
	* tests/test-font-face.cc: Added.  excercise the functionality of
	ToyFontFace slightly

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* m4/ax_boost_test_exec_monitor.m4: added this file which was forgotten
	earlier.  I'm not entirely sure if it's necessary, but just in case...

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: post-release bump

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* NEWS:
	* configure.in: update for 1.6.2 release

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: fix boost unit test detection (hack stolen from Dodji from
	nemiver)
	* tests/Makefile.am: explicitly link against the static unit test lib.  This
	should fix the test build on (at least) Ubuntu Hardy, where previously I was
	getting an undefined reference to main()

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/enums.h: update to include new surface types.  Remove an unnecessary
	cairo version check since we depend on a higher version of cairo for other
	stuff anyway

2008-08-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/exception.cc:
	* cairomm/exception.h: renamed get_status() to get_status_code() to make the
	name a little bit more clear

2008-08-09  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in: Removed #include "resource.h"
	since there is no resource.h, and it works well without that include.

	* MSVC_Net2005/cairomm/Makefile.am: Copy cairommconfig.h from
	cairomm/, so it is available to the visual studio project.
