@@ -30,10 +30,10 @@ ScaledFont::ScaledFont(cobject* cobj, bool has_reference)
     m_cobject = cairo_scaled_font_reference(cobj);
 }
 
-RefPtr<ScaledFont> ScaledFont::create(FontFace& font_face, const Matrix& font_matrix,
+RefPtr<ScaledFont> ScaledFont::create(const RefPtr<FontFace>& font_face, const Matrix& font_matrix,
     const Matrix& ctm, const FontOptions& options)
 {
-  cairo_scaled_font_t* cobj = cairo_scaled_font_create(font_face.cobj(), &font_matrix, &ctm, options.cobj());
+  cairo_scaled_font_t* cobj = cairo_scaled_font_create(font_face->cobj(), &font_matrix, &ctm, options.cobj());
   check_status_and_throw_exception(cairo_scaled_font_status(cobj));
   return RefPtr<ScaledFont>(new ScaledFont(cobj, false));
 }
